--- a/Webproject/Views/Shared/PartialNavbar.cshtml
+++ b/Webproject/Views/Shared/PartialNavbar.cshtml
@@ -10,14 +10,14 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" action="Index">
+                    <a class="nav-link" asp-controller="Blog" action="Index">
                         Anasayfa
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="" action="">Hakkında</a>
+                    <a class="nav-link" asp-controller="About" action="Index">Hakkımızda</a>
                 </li>
 
                 <li class="nav-item">
@@ -25,7 +25,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="" action="">İletişim</a>
+                    <a class="nav-link" asp-controller="Contact" action="Index">İletişim</a>
                 </li>
 
             </ul>
