--- a/Webproject/Views/Login/Index.cshtml
+++ b/Webproject/Views/Login/Index.cshtml
@@ -9,21 +9,21 @@
 		<h3 class="tittle">Oturum aç</h3>
 		<div class="row inner-sec">
 			<div class="login p-5 bg-light mx-auto mw-100">
-				<form action="#" method="post">
+				<form method="post">
 					<div class="form-group">
 						<label for="exampleInputEmail1 mb-2">Mail adresiniz</label>
-						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
+						<input type="email" class="form-control" id="exampleInputEmail1" name="WriterMail" aria-describedby="emailHelp" placeholder="" required="">
 						<small id="emailHelp" class="form-text text-muted">Mail adresini kimseyle paylaşmayacağız.</small>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputPassword1 mb-2">Şifre</label>
-						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
+						<input type="password" class="form-control" id="exampleInputPassword1" name="Writerpassword" placeholder="" required="">
 					</div>
 					<div class="form-check mb-2">
 						<input type="checkbox" class="form-check-input" id="exampleCheck1">
 						<label class="form-check-label" for="exampleCheck1">Beni hatırla</label>
 					</div>
-					<button type="submit" class="btn btn-primary submit mb-4">Giriş yap</button>
+					<button type="submit" asp-action="Index" asp-controller="Login" class="btn btn-primary submit mb-4">Giriş yap</button>
 					<p><a asp-action="Index" asp-controller="Register"> Bir hesabın yok mu?</a></p>
 				</form>
 			</div>
