--- a/Webproject/Views/Shared/PartialFooter.cshtml
+++ b/Webproject/Views/Shared/PartialFooter.cshtml
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 footer-grid-agileits-w3ls text-left">
-                <h3>About US</h3>
-                <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. lacinia eget consectetur sed, convallis at tellus..</p>
+                <h3>Hakkımızda</h3>
+                <p>Kabul edelim ki, zaman zaman teknolojiyi hayatımızdan çıkarma ya da hayatımızdaki etkisini azaltmaya çabalasak da, hepimiz günlük hayatımızda teknolojiyi kullanmaktan memnunuz. Çünkü gerçekten  teknolojinin günlük işleri kolaylaştırdığını ve kendimize daha fazla zaman kaldığını düşünüyoruz. Peki, hayatımızı kolaylaştıran bu teknolojilerin neler olduğunu biliyor muyuz?Bu sorudan yola çıktım ve...</p>
                 <div class="read">
-                    <a href="single.html" class="btn btn-primary read-m">Read More</a>
+                    <a class="btn btn-primary read-m" asp-action="Index"asp-controller="About">Devamını oku</a>
                 </div>
             </div>
             <div class="col-lg-4 footer-grid-agileits-w3ls text-left">
@@ -32,59 +32,12 @@
                         </div>
 
                     </div>
-                    <div class="blog-grids row mb-3">
-                        <div class="col-md-5 blog-grid-left">
-                            <a href="single.html">
-                                <img src="~/CoreBlogTema/images/5.jpg" class="card-img-top img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-7 blog-grid-right">
-
-                            <h5>
-                                <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                            </h5>
-                            <div class="sub-meta">
-                                <span>
-                                    <i class="far fa-clock"></i> 20 Jan, 2018
-                                </span>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="blog-grids row mb-3">
-                        <div class="col-md-5 blog-grid-left">
-                            <a href="single.html">
-                                <img src="~/CoreBlogTema/images/6.jpg" class="card-img-top img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-7 blog-grid-right">
-
-                            <h5>
-                                <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                            </h5>
-                            <div class="sub-meta">
-                                <span>
-                                    <i class="far fa-clock"></i> 20 Jan, 2018
-                                </span>
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
             </div>
             <!-- subscribe -->
             <div class="col-lg-4 subscribe-main footer-grid-agileits-w3ls text-left">
-                <h2>Signup to our newsletter</h2>
-                <div class="subscribe-main text-left">
-                    <div class="subscribe-form">
-                        <form action="#" method="post" class="subscribe_form">
-                            <input class="form-control" type="email" placeholder="Enter your email..." required="">
-                            <button type="submit" class="btn btn-primary submit">Submit</button>
-                        </form>
-                        <div class="clearfix"> </div>
-                    </div>
-                    <p>We respect your privacy.No spam ever!</p>
-                </div>
+                <h2>Mail bültenine abone olun</h2>
+                @await Html.PartialAsync("~/Views/Newsletter/Subscribemail.cshtml");
                 <!-- //subscribe -->
             </div>
         </div>
@@ -122,7 +75,7 @@
             </div>
             <div class="w3layouts-agile-copyrightbottom">
                 <p>
-                    © @DateTime.UtcNow.Year Weblog. All Rights Reserved | Design by
+                    © @DateTime.UtcNow.Year Weblog. Asp.net Core Proje Tüm hakları saklıdır. | Design by
                     <a href="http://w3layouts.com/">W3layouts</a>
                 </p>
             </div>
