--- a/Webproject/Views/Shared/PartialTopBar.cshtml
+++ b/Webproject/Views/Shared/PartialTopBar.cshtml
@@ -2,7 +2,7 @@
 <div class="top-bar_sub_w3layouts container-fluid">
     <div class="row">
         <div class="col-md-4 logo text-left">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" asp-controller="Writer" asp-action="Index">
                 <i class="fab fa-linode"></i> Website
             </a>
         </div>
