--- a/Webproject/Views/Message/InBox.cshtml
+++ b/Webproject/Views/Message/InBox.cshtml
@@ -18,7 +18,7 @@
     {
         <tr>
             <td>@item.MessageID</td>
-            <td>@item.MessageSenderUser.WriterName @item.MessageSenderUser.WriterSurname</td>
+            <td>@item.MessageSenderUser.Name @item.MessageSenderUser.Surname</td>
             <td>@item.MessageSubject</td>
             @if (item.MessageStatus == true)
             {
