--- a/Webproject/Views/Message/SendBox.cshtml
+++ b/Webproject/Views/Message/SendBox.cshtml
@@ -19,7 +19,7 @@
     {
         <tr>
             <td>@item.MessageID</td>
-            <td>@item.MessageReceiverUser.WriterName @item.MessageReceiverUser.WriterSurname</td>
+            <td>@item.MessageReceiverUser.Name @item.MessageReceiverUser.Surname</td>
             <td>@item.MessageSubject</td>
             @if (item.MessageStatus == true)
             {
