--- a/Webproject/Views/NewsLetter/SubscribeMail.cshtml
+++ b/Webproject/Views/NewsLetter/SubscribeMail.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="tech-btm">
     <p>Teknoloji, yazılım ve diğer bloglar... </p>
-    <form method="post">
+    <form>
         <input type="email" placeholder="Email" id="txtmail" name="Mail" required="">
         <input type="submit" id="btn" value="Abone ol">
     </form>
