--- a/Webproject/Views/Shared/Components/BlogListDashboard/Default.cshtml
+++ b/Webproject/Views/Shared/Components/BlogListDashboard/Default.cshtml
@@ -22,7 +22,7 @@
                                 <tr>
                                     <td></td>
                                     <td>
-                                        <img src="~/writer/assets/images/faces/face1.jpg" class="mr-2" alt="image"> @item.BlogName
+                                        <img src="@item.BlogThumbnailImage" class="mr-2" alt="image"> @item.BlogName
                                     </td>
                                     
                                     <td>
