--- a/Webproject/Views/Comment/PartialAddComment.cshtml
+++ b/Webproject/Views/Comment/PartialAddComment.cshtml
@@ -1,14 +1,17 @@
 ﻿<div class="comment-top">
     <h4>Bir yorum yapın</h4>
+
     <div class="comment-bottom">
-        <form action="/Comment/PartialAddComment" method="post">
-            <input class="form-control" type="text"placeholder="Adınız soyadınız" name="CommentUserName" required="">
+        <form method="post" asp-action="PartialAddComment" asp-controller="Comment">
+            <input class="form-control" type="text" id="blogid" placeholder="Adınız soyadınız" value="@ViewBag.Id" name="BlogId" hidden>
 
-            <input class="form-control" type="text" placeholder="Konu" name="CommentTitle" required="">
+            <input class="form-control" type="text" id="namesurname" placeholder="Adınız soyadınız" name="CommentUserName" required="">
 
-            <textarea class="form-control" type="text" placeholder="Yorumunuz..." name="CommentContent" required=""></textarea>
+            <input class="form-control" type="text" id="subject" placeholder="Konu" name="CommentTitle" required="">
 
-            <button type="submit" class="btn btn-primary submit">Yorum yap</button>
+            <textarea class="form-control" type="text" id="comment" placeholder="Yorumunuz..." rows="5" name="CommentContent" required=""></textarea>
+
+            <button type="submit" id="btnAddComment" class="btn btn-primary submit">Yorum yap</button>
         </form>
     </div>
 </div>
