--- a/Webproject/Views/Shared/Components/BlogLast3Post/Default.cshtml
+++ b/Webproject/Views/Shared/Components/BlogLast3Post/Default.cshtml
@@ -7,7 +7,7 @@
         <div class="blog-grids row mb-3">
             <div class="col-md-5 blog-grid-left">
                 <a href="/Blog/BlogReadAll/@item.BlogID">
-                    <img src="~/CoreBlogTema/images/4.jpg" class="card-img-top img-fluid" alt="">
+                    <img src="@item.BlogThumbnailImage" class="card-img-top img-fluid" alt="">
                 </a>
             </div>
             <div class="col-md-7 blog-grid-right">
