--- a/Webproject/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/Webproject/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -8,10 +8,10 @@
     {
         <a class="dropdown-item preview-item" href="/Message/MessageDetail/@item.MessageID">
             <div class="preview-thumbnail">
-                <img src="@item.MessageSenderUser.WriterImage" alt="image" class="profile-pic">
+                <img src="@item.MessageSenderUser.ImageUrl" alt="image" class="profile-pic">
             </div>
             <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.MessageSenderUser.WriterName @item.MessageSenderUser.WriterSurname kullanicisi size mesaj gonderdi.</h6>
+                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.MessageSenderUser.Name @item.MessageSenderUser.Surname kullanicisi size mesaj gonderdi.</h6>
                 <p class="text-gray mb-0"> @item.MessageDate.ToShortDateString()</p>
             </div>
         </a>
