--- a/Webproject/Views/Shared/WriterLayot.cshtml
+++ b/Webproject/Views/Shared/WriterLayot.cshtml
@@ -71,7 +71,7 @@
                         </a>
                     </li>
                     <li class="nav-item nav-logout d-none d-lg-block">
-                        <a class="nav-link" asp-action="LogOut" asp-controller="Login">
+                        <a class="nav-link" asp-action="LogOut" asp-controller="LoginUser">
                             <i class="mdi mdi-power"></i>
                         </a>
                     </li>
