--- a/Webproject/Views/Writer/EditProfile.cshtml
+++ b/Webproject/Views/Writer/EditProfile.cshtml
@@ -10,7 +10,11 @@
             <form method="post" asp-action="EditProfile" asp-controller="Writer">
                 <div class="form-group">
                     <label for="WriterName">Ad Soyad</label>
-                    <input type="text" asp-for="@Model.namesurname" class="form-control" />
+                    <input type="text" asp-for="@Model.name" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="WriterName">Ad Soyad</label>
+                    <input type="text" asp-for="@Model.surname" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label for="WriterSurname">Kullanici adi</label>
