--- a/Webproject/Views/About/Index.cshtml
+++ b/Webproject/Views/About/Index.cshtml
@@ -17,22 +17,22 @@
                 <!--left-->
                 <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
                     <div class="blog-grid-top">
-
-                        <div class="blog_info_left_grid">
-                            <a href="single.html">
-                                <img src="~/CoreBlogTema/images/b5.jpg" class="img-fluid" alt="">
-                            </a>
-                        </div>
-                        <h3>
-                            Biz kimiz & Misyonumuz & Vizyonumuz
-                        </h3>
                         @foreach (var item in Model)
                         {
+                            <div class="blog_info_left_grid">
+                                <a href="single.html">
+                                    <img src="@item.AboutImage1" class="img-fluid" alt="">
+                                </a>
+                            </div>
+                            <h3>
+                                Biz kimiz & Misyonumuz & Vizyonumuz
+                            </h3>
+
                             <p>
                                 @item.AboutDetails1
                             </p>
                         }
-                        
+
                     </div>
                 </div>
                 <!--//left-->
@@ -47,7 +47,7 @@
 
                         @await Html.PartialAsync("~/Views/About/SocialMediaAbout.cshtml")
 
-                        
+
                         <div class="tech-btm">
                             <h4>Son postlar</h4>
                             @await Component.InvokeAsync("WriterLastBlog")
@@ -60,7 +60,7 @@
         </div>
     </section>
     <!--//main-->
-  
+
     <a href="#home" class="scroll" id="toTop" style="display: block;">
         <span id="toTopHover" style="opacity: 1;"> </span>
     </a>
