--- a/Webproject/Views/Shared/Components/CategoryListDashboard/Default.cshtml
+++ b/Webproject/Views/Shared/Components/CategoryListDashboard/Default.cshtml
@@ -21,8 +21,15 @@
                                 <tr>
                                     <td> @item.CategoryID </td>
                                     <td> @item.CategoryName </td>
-                                    <td> @item.CategoryStatus </td>
-                                    
+                                    @if (item.CategoryStatus == true)
+                                    {
+                                        <td> Aktif </td>
+                                    }
+                                    @if (item.CategoryStatus == false)
+                                    {
+                                        <td> Pasif </td>
+                                    }
+
                                     <td>
                                         <div class="progress">
                                             <div class="progress-bar bg-gradient-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -30,7 +37,7 @@
                                     </td>
                                 </tr>
                             }
-                            
+
                         </tbody>
                     </table>
                 </div>
