--- a/Webproject/Views/Blog/BlogReadAll.cshtml
+++ b/Webproject/Views/Blog/BlogReadAll.cshtml
@@ -1,166 +1,113 @@
-﻿@{
-    ViewData["Title"] = "BlogReadAll";
-    Layout = "~/Views/Shared/UserLayout.cshtml";
+﻿@model IEnumerable<EntitiyLayer.Concrete.Blog>
+@{
+    ViewData["Title"] = "Blog detay";
+    Layout = "~/Views/Shared/MainLayout.cshtml";
 }
-@model IEnumerable<EntitiyLayer.Concrete.Blog>
-<body>
-    <!--//banner-->
-    <section class="banner-bottom">
-        <!--/blog-->
-        <div class="container">
-            <div class="row">
-                <!--left-->
-                <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
-                    @foreach (var item in Model)
-                    {
-                        <div class="blog-grid-top">
-                            <div class="b-grid-top">
-                                <div class="blog_info_left_grid">
-                                    <img src="@item.BlogImage" width="800" height="900" class="img-fluid" alt="">
+<section class="banner-bottom py-3">
+    <div class="container">
+        <div class="row">
+            <!--left-->
+            <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
+                @foreach (var item in Model)
+                {
+                    <div class="blog-grid-top">
+                        <div class="b-grid-top">
+                            <div class="blog_info_left_grid">
+                                <img src="@item.BlogImage" style="width:900px" class="img-fluid" alt="">
+                            </div>
+                            <div class="bg-dark" style="height:50px">
+                                <div class="p-2">
+                                    <span class="text-white p-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-calendar-day" viewBox="0 0 16 16">
+                                            <path d="M4.684 11.523v-2.3h2.261v-.61H4.684V6.801h2.464v-.61H4v5.332zm3.296 0h.676V8.98c0-.554.227-1.007.953-1.007.125 0 .258.004.329.015v-.613a2 2 0 0 0-.254-.02c-.582 0-.891.32-1.012.567h-.02v-.504H7.98zm2.805-5.093c0 .238.192.425.43.425a.428.428 0 1 0 0-.855.426.426 0 0 0-.43.43m.094 5.093h.672V7.418h-.672z" />
+                                            <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z" />
+                                        </svg>
+                                        @item.BlogCreateDate.ToShortDateString()
+                                    </span>
+
+                                    <span class="text-white p-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+                                            <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z" />
+                                        </svg>
+                                        @ViewBag.CategoryName
+                                    </span>
                                 </div>
-                                <div class="blog-info-middle">
-                                    <ul>
-                                        <li>
-                                            <a href="#">
-                                                <i class="far fa-calendar-alt"></i>
-                                                @item.BlogCreateDate.ToString("MM/dd/yyyy HH:mm")
-
-                                            </a>
-                                        </li>
-                                        <li class="mx-2">
-                                            <a href="#">
-                                                <i class="far fa-thumbs-up"></i> 201 Likes
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="far fa-comment"></i> @ViewBag.CommentCount Comments
-                                            </a>
-                                        </li>
-
-                                    </ul>
-
-                                </div>
-                            </div>
-
-                            <h3>
-                                <a href="single.html">@item.BlogName </a>
-                            </h3>
-                            <p>
-                                @item.BlogContent
-                            </p>
-                        </div>
-                    }
-                    @await Component.InvokeAsync("CommentListByBlog", new { id = ViewBag.Id })
-                    @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
-                    @await Html.PartialAsync("~/Views/Comment/partialAddComment.cshtml", new { id = ViewBag.Id })
-
-                </div>
-
-                <!--//left-->
-                <!--right-->
-                <aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
-                    <div class="right-blog-info text-left">
-                        <div class="tech-btm">
-                            <img src="~/CoreBlogTema/images/banner1.jpg" class="img-fluid" alt="">
-                        </div>
-
-                        <h4>Mail bültenine abone olun.</h4>
-                        @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
-
-                        @await Component.InvokeAsync("CategoryList")
-
-                        @await Component.InvokeAsync("WriterLastBlog")
-
-                        <div class="single-gd my-5 tech-btm">
-                            <h4>Our Progress</h4>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
-                                     aria-valuemax="100"></div>
                             </div>
                         </div>
-                        <div class="single-gd tech-btm">
-                            <h4>Recent Post</h4>
-                            <div class="blog-grids">
-                                <div class="blog-grid-left">
-                                    <a href="single.html">
-                                        <img src="~/CoreBlogTema/images/b1.jpg" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-                                <div class="blog-grid-right">
-
-                                    <h5>
-                                        <a href="single.html">Pellentesque dui, non felis. Maecenas male</a>
-                                    </h5>
-                                </div>
-                                <div class="clearfix"> </div>
+                        <div>
+                            <div class="p-2">
+                                <h1>@item.BlogName</h1>
+                                <p>@item.BlogContent</p>
                             </div>
+                        </div>
+
+                    </div>
+                }
+                @await Html.PartialAsync("~/Views/Comment/partialAddComment.cshtml", new { id = ViewBag.Id })
+                @await Component.InvokeAsync("CommentListByBlog", new { id = ViewBag.Id })
+                @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
+
+            </div>
+
+            <aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
+                <div class="right-blog-info text-left">
+
+                    <h4>Mail bültenine abone olun.</h4>
+                    @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
+
+                    @await Component.InvokeAsync("CategoryList")
+
+                    @await Component.InvokeAsync("BlogLast3Post")
+
+
+                    <div class="single-gd tech-btm mt-5">
+                        <h4>Recent Post</h4>
+                        <div class="blog-grids mt-3">
+                            <div class="blog-grid-left">
+                                <a href="single.html">
+                                    <img src="~/CoreBlogTema/images/b1.jpg" class="img-fluid" alt="">
+                                </a>
+                            </div>
+                            <div class="blog-grid-right mt-3">
+
+                                <h5>
+                                    <a href="single.html">Pellentesque dui, non felis. Maecenas male</a>
+                                </h5>
+                            </div>
+                            <div class="clearfix"> </div>
                         </div>
                     </div>
-                </aside>
-                <!--//right-->
-            </div>
+                </div>
+            </aside>
         </div>
-    </section>
-    <!--//main-->
-    <!--footer-->
-    <!-- js -->
-    <script src="js/jquery-2.2.3.min.js"></script>
-    <!-- //js -->
-    <!--/ start-smoth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
-    <script>
-        jQuery(document).ready(function ($) {
-            $(".scroll").click(function (event) {
-                event.preventDefault();
-                $('html,body').animate({
-                    scrollTop: $(this.hash).offset().top
-                }, 900);
-            });
+    </div>
+</section>
+
+<script src="js/jquery-2.2.3.min.js"></script>
+<script src="js/move-top.js"></script>
+<script src="js/easing.js"></script>
+<script>
+    jQuery(document).ready(function ($) {
+        $(".scroll").click(function (event) {
+            event.preventDefault();
+            $('html,body').animate({
+                scrollTop: $(this.hash).offset().top
+            }, 900);
         });
-    </script>
-    <!--// end-smoth-scrolling -->
+    });
+</script>
 
-    <script>
-        $(document).ready(function () {
-            /*
-                                    var defaults = {
-                                            containerID: 'toTop', // fading element id
-                                        containerHoverID: 'toTopHover', // fading element hover id
-                                        scrollSpeed: 1200,
-                                        easingType: 'linear'
-                                        };
-                                    */
+<script>
+    $(document).ready(function () {
 
-            $().UItoTop({
-                easingType: 'easeOutQuart'
-            });
-
+        $().UItoTop({
+            easingType: 'easeOutQuart'
         });
-    </script>
-    <a href="#home" class="scroll" id="toTop" style="display: block;">
-        <span id="toTopHover" style="opacity: 1;"> </span>
-    </a>
 
-    <!-- //Custom-JavaScript-File-Links -->
-    <script src="js/bootstrap.js"></script>
+    });
+</script>
+<a href="#home" class="scroll" id="toTop" style="display: block;">
+    <span id="toTopHover" style="opacity: 1;"> </span>
+</a>
 
-
-</body>
+<script src="js/bootstrap.js"></script>
