--- a/Webproject/Views/NewsLetter/SubscribeMail.cshtml
+++ b/Webproject/Views/NewsLetter/SubscribeMail.cshtml
@@ -1,10 +1,19 @@
 ﻿<div class="tech-btm">
-    <p>Teknoloji, yazılım ve diğer bloglar... </p>
-    <form>
-        <input type="email" placeholder="Email" id="txtmail" name="Mail" required="">
-        <input type="submit" id="btn" value="Abone ol">
-    </form>
+    <div>
+        <image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_bkwOYqfEUEFqEHq192g2LvnB373wk214Cg&usqp=CAU" class=" mt-md-2 w-100 rounded"></image>
+        <p class="mt-2">Teknoloji, yazılım ve diğer bloglar... </p>
+        <form>
+            <div class="row m-auto">
+                <div class="col-12">
+                    <input type="email" class="form-control" placeholder="Email" id="txtmail" name="Mail" required="">
+                </div>
+                <div>
+                    <input type="submit" class="form-control mt-2 btn btn-block bg-success" id="btn" value="Abone ol">
+                </div>
+            </div>
 
+        </form>
+    </div>
 </div>
 <script type="text/javascript">
     $("#btn").click(function () {
