--- a/Webproject/Views/About/Index.cshtml
+++ b/Webproject/Views/About/Index.cshtml
@@ -1,69 +1,54 @@
 ﻿@using EntitiyLayer.Concrete
 @model List<About>
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/UserLayout.cshtml";
+    ViewData["Title"] = "Hakkimizda";
+    Layout = "~/Views/Shared/MainLayout.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="zxx">
+<section class="main-content-w3layouts-agileits py-3">
+    <div class="container">
+        <h2 class="pb-2 border-bottom">Hakkimizda</h2>
+        <div class="row inner-sec">
+            <!--left-->
+            <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
+                <div class="blog-grid-top">
+                    @foreach (var item in Model)
+                    {
+                        <div class="blog_info_left_grid">
+                            <a href="single.html">
+                                <img src="@item.AboutImage1" class="img-fluid" alt="">
+                            </a>
+                        </div>
+                        <h3>
+                            Biz kimiz & Misyonumuz & Vizyonumuz
+                        </h3>
 
-<body>
-    <!--/main-->
-    <section class="main-content-w3layouts-agileits">
-        <div class="container">
-            <h3 class="tittle">Hakkımızda</h3>
-            <div class="row inner-sec">
-                <!--left-->
-                <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
-                    <div class="blog-grid-top">
-                        @foreach (var item in Model)
-                        {
-                            <div class="blog_info_left_grid">
-                                <a href="single.html">
-                                    <img src="@item.AboutImage1" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                            <h3>
-                                Biz kimiz & Misyonumuz & Vizyonumuz
-                            </h3>
+                        <p>
+                            @item.AboutDetails1
+                        </p>
+                    }
 
-                            <p>
-                                @item.AboutDetails1
-                            </p>
-                        }
+                </div>
+            </div>
+            <!--//left-->
+            <!--right-->
+            <aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
+                <div class="right-blog-info text-left">
 
+
+                    @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
+
+                    @await Html.PartialAsync("~/Views/About/SocialMediaAbout.cshtml")
+
+
+                    <div class="tech-btm">
+                        <h4>Son postlar</h4>
+                        @await Component.InvokeAsync("WriterLastBlog")
                     </div>
                 </div>
-                <!--//left-->
-                <!--right-->
-                <aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
-                    <div class="right-blog-info text-left">
-                        <div class="tech-btm">
-                            <img src="~/CoreBlogTema/images/banner1.jpg" class="img-fluid" alt="">
-                        </div>
 
-                        @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
-
-                        @await Html.PartialAsync("~/Views/About/SocialMediaAbout.cshtml")
-
-
-                        <div class="tech-btm">
-                            <h4>Son postlar</h4>
-                            @await Component.InvokeAsync("WriterLastBlog")
-                        </div>
-                    </div>
-
-                </aside>
-                <!--//right-->
-            </div>
+            </aside>
+            <!--//right-->
         </div>
-    </section>
-    <!--//main-->
-
-    <a href="#home" class="scroll" id="toTop" style="display: block;">
-        <span id="toTopHover" style="opacity: 1;"> </span>
-    </a>
-</body>
-
-</html>
+    </div>
+</section>
