--- a/Webproject/Views/RegisterUser/Index.cshtml
+++ b/Webproject/Views/RegisterUser/Index.cshtml
@@ -1,102 +1,71 @@
 ﻿@model UserSignUpViewModel
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/UserLayout.cshtml";
+    ViewData["Title"] = "Kayit ol";
+    Layout = "~/Views/Shared/MainLayout.cshtml";
 }
-
-
-
-<!DOCTYPE html>
-<html>
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>WebBlog| Kayit ol</title>
-
-    <link href="~/inspinia-gh-pages/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/inspinia-gh-pages/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="~/inspinia-gh-pages/css/plugins/iCheck/custom.css" rel="stylesheet">
-    <link href="~/inspinia-gh-pages/css/animate.css" rel="stylesheet">
-    <link href="~/inspinia-gh-pages/css/style.css" rel="stylesheet">
-
-</head>
-
-<body class="gray-bg">
-
-    <div class="middle-box text-center loginscreen animated fadeInDown">
+<div class="text-center mt-2 mb-5 border border-2 rounded">
+    <div>
         <div>
-            <div>
+            <h1 class="logo-name mt-5">IN+</h1>
+        </div>
+        <div class="mt-5">
+            <h3>Blogumuza Hosgeldiniz</h3>
+        </div>
+        <p>
+            Blogumuzda bulunan yuzlerce bloga erismek icin kayit olunuz.
+            <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
+        </p>
 
-                <h1 class="logo-name">IN+</h1>
+        <div class="border border-5 w-50 m-auto">
+            <div class=" mt-5">
 
+                <h4>Kayit ol</h4>
             </div>
-            <h3>Kayit Ekrani</h3>
-            <p>Yeni bir hesap olusturun</p>
-            <form class="m-t" role="form" asp-action="Index" method="post">
-                <div class="form-group">
-                    <span  asp-validation-for="@Model.Name"></span>
-                    <input type="text" class="form-control" asp-for="@Model.Name" placeholder="Adiniz">
+            <form class="mt-5" role="form" asp-action="Index" method="post">
+                <div class="form-group mt-2">
+                    <span asp-validation-for="@Model.Name"></span>
+                    <input type="text" class="form-control w-50 m-auto" asp-for="@Model.Name" placeholder="Adiniz">
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <span asp-validation-for="@Model.Surname"></span>
-                    <input type="text" class="form-control" asp-for="@Model.Surname" placeholder="Soyadiniz">
+                    <input type="text" class="form-control w-50 m-auto" asp-for="@Model.Surname" placeholder="Soyadiniz">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <span asp-validation-for="@Model.UserName"></span>
-                    <input type="text" class="form-control" asp-for="@Model.UserName" placeholder="Kullanici adiniz">
+                    <input type="text" class="form-control w-50 m-auto" asp-for="@Model.UserName" placeholder="Kullanici adiniz">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <span asp-validation-for="@Model.Mail"></span>
-                    <input type="email" class="form-control" asp-for="@Model.Mail" placeholder="Mail">
+                    <input type="email" class="form-control w-50 m-auto" asp-for="@Model.Mail" placeholder="Mail">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <span asp-validation-for="@Model.Password"></span>
-                    <input type="password" class="form-control" asp-for="@Model.Password" placeholder="Sifre">
+                    <input type="password" class="form-control w-50 m-auto" asp-for="@Model.Password" placeholder="Sifre">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <span asp-validation-for="@Model.ConfirmPassword"></span>
-                    <input type="password" class="form-control" asp-for="@Model.ConfirmPassword" placeholder="Sifre (Onayla)">
+                    <input type="password" class="form-control w-50 m-auto" asp-for="@Model.ConfirmPassword" placeholder="Sifre (Onayla)">
                 </div>
 
                 <div class="form-group">
-                    <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Kullanici sartlarini okudum onayliyorum. </label></div>
+                    <div class="checkbox i-checks">
+                        <label> <input type="checkbox"><i></i> Kullanici sartlarini okudum onayliyorum. </label>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Kayit ol</button>
+                <button type="submit" class="btn btn-primary block full-width mt-5 m-b">Login</button>
 
-                <p class="text-muted text-center"><small>Hesabiniz var mi?</small></p>
+                <p class="text-muted text-center mt-5"><small>Hesabiniz var mi?</small></p>
 
-                <a class="btn btn-sm btn-white btn-block" href="/LoginUser/Index/">Giris yap</a>
-            
+                <a class="btn btn-sm btn-white btn-block mt-2" href="/LoginUser/Index/">Giris yap</a>
+
                 <div class="text-danger" asp-validation-summary="ModelOnly"></div>
             </form>
-            <p class="m-t"> <small>Asp.Net Core Proje; @DateTime.UtcNow</small> </p>
         </div>
+        <p class="m-t"> <small>Asp.Net Core Proje; @DateTime.UtcNow</small> </p>
     </div>
-
-    <!-- Mainly scripts -->
-    <script src="~/inspinia-gh-pages/js/jquery-3.1.1.min.js"></script>
-    <script src="~/inspinia-gh-pages/js/popper.min.js"></script>
-    <script src="~/inspinia-gh-pages/js/bootstrap.js"></script>
-    <!-- iCheck -->
-    <script src="~/inspinia-gh-pages/js/plugins/iCheck/icheck.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.i-checks').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-            });
-        });
-    </script>
-</body>
-
-</html>
-
-
+</div>
