--- a/Webproject/Views/Shared/Components/BlogLast3Post/Default.cshtml
+++ b/Webproject/Views/Shared/Components/BlogLast3Post/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EntitiyLayer.Concrete
 @model List<Blog>
 <div class="tech-btm">
-    <h3>Latest Posts</h3>
+    <h3>Son Bloglar</h3>
     @foreach (var item in Model)
     {
         <div class="blog-grids row mb-3">
@@ -13,11 +13,11 @@
             <div class="col-md-7 blog-grid-right">
 
                 <h5>
-                    <a href="/Blog/BlogReadAll/@item.BlogID">@item.BlogContent.Substring(0,item.BlogContent.Substring(0,70).LastIndexOf(" "))... </a>
+                    <a class="nav-link" href="/Blog/BlogReadAll/@item.BlogID">@item.BlogContent.Substring(0,item.BlogContent.Substring(0,70).LastIndexOf(" "))... </a>
                 </h5>
                 <div class="sub-meta">
                     <span>
-                        <i class="far fa-clock"></i>@(((DateTime)item.BlogCreateDate).ToString("f"))
+                        <i class="bi bi-calendar">  </i>@(((DateTime)item.BlogCreateDate).ToString("f"))
                     </span>
                 </div>
             </div>
