--- a/Webproject/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/Webproject/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<EntitiyLayer.Concrete.Category>
-<div class="tech-btm">
+
+<div class="tech-btm mt-4">
     <h4>Kategoriler</h4>
     <ul class="list-group single">
         @foreach (var item in Model)
