--- a/Webproject/Views/Shared/Components/CommentListByBlog/Default.cshtml
+++ b/Webproject/Views/Shared/Components/CommentListByBlog/Default.cshtml
@@ -1,34 +1,34 @@
 ﻿@model IEnumerable<EntitiyLayer.Concrete.Comment>
 
-<div class="comment-top">
-    <h4>Yorumlar</h4>
+<div class="mt-5">
+    <h2>Yorumlar</h2>
     @if (Model.Count() == 0)
     {
-        <div class="media">
-            <div class="media-body">
-                <h2>Yorum yok</h2>
+        <div class="border-bottom border-top">
+            <div class="media-body mt-4 mb-5">
+                <h3>Yorum yok</h3>
                 <p>İlk yorumu siz yapın..</p>
             </div>
         </div>
     }
     else
     {
-        @foreach (var item in Model)
-        {
-            <div class="media">
-                <img src="~/CoreBlogTema/images/t1.jpg" alt="" class="img-fluid" />
-                <div class="media-body">
-                    <h5 class="mt-0">@item.CommentUserName</h5>
-                    <p>
-                        @item.CommentContent
-                    </p>
-
+        <div class="row">
+                <div class="page-header">
+                    <h3><small class="pull-right">45 Yorum</small>  </h3>
                 </div>
-                <p>
-                    @item.CommentDate.ToString("MM/dd/yyyy HH:mm")
-                </p>
+                <div class="comments-list">
+                    @foreach (var item in Model)
+                    {
+                        <div class="card mt-2" style="width: 100%;">
+                            <div class="card-body">
+                                <h5 class="card-title">Yorum sahibi : @item.CommentUserName</h5>
+                                <p class="card-text border-top"><h5>Yorum:</h5>@item.CommentContent</p>
+                            </div>
+                        </div>
+
+                    }
+                </div>
             </div>
-            <br />
-        }
     }
 </div>
