--- a/Webproject/Views/Shared/Components/ProfileInfoOnWriterLayout/Default.cshtml
+++ b/Webproject/Views/Shared/Components/ProfileInfoOnWriterLayout/Default.cshtml
@@ -3,7 +3,16 @@
 <li class="nav-item nav-profile dropdown">
     <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
         <div class="nav-profile-img">
-            <img src="@Model.ImageUrl" alt="image">
+
+            @if (Model.ImageUrl == null)
+            {
+                <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="image">
+            }
+            else
+            {
+                <img src="@Model.ImageUrl" alt="image">
+
+            }
             <span class="availability-status online"></span>
         </div>
         <div class="nav-profile-text">
@@ -11,11 +20,11 @@
         </div>
     </a>
     <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-        <a class="dropdown-item" href="#">
-            <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log
+        <a class="dropdown-item" asp-action="EditProfile" asp-controller="Writer">
+            <i class="mdi mdi-cached mr-2 text-success"></i> Ayarlar
         </a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" asp-action="LogOut" asp-controller="Login">
+        <a class="dropdown-item" asp-action="LogOut" asp-controller="LoginUser">
             <i class="mdi mdi-logout mr-2 text-primary"></i> Cıkış yap
         </a>
     </div>
