--- a/Webproject/Views/Shared/UserLayout.cshtml
+++ b/Webproject/Views/Shared/UserLayout.cshtml
@@ -21,12 +21,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
     </script>
-    <link href="~/CoreBlogTema/css/bootstrap.css" rel='stylesheet' type='text/css' />
+    @* <link href="~/CoreBlogTema/css/bootstrap.css" rel='stylesheet' type='text/css' /> *@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="~/CoreBlogTema/css/single.css">
     <link href="~/CoreBlogTema/css/style.css" rel='stylesheet' type='text/css' />
     <link href="~/CoreBlogTema/css/fontawesome-all.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800"
           rel="stylesheet">
+    <link href="~/inspinia-gh-pages/font-awesome/css/font-awesome.css" rel="stylesheet">
+
+    <link href="~/inspinia-gh-pages/css/animate.css" rel="stylesheet">
+    <link href="~/inspinia-gh-pages/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,16 +46,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </header>
 
     <!--//header-->
-    <!--/banner-->
-    <div class="banner-inner">
-    </div>
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="index.html">Home</a>
-        </li>
-        <li class="breadcrumb-item active">Blog3</li>
-    </ol>
-    <!--//banner-->
     <!--main-->
     @RenderBody()
     <!--//main-->
@@ -58,11 +53,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     @await Html.PartialAsync("PartialFooter");
     <!-- //footer -->
     <!-- js -->
-    <script src="~/CoreBlogTema/js/jquery-2.2.3.min.js"></script>
+    
+    <script src="~/inspinia-gh-pages/js/jquery-3.1.1.min.js"></script>
     <!-- //js -->
+    <!-- Mainly scripts -->
+    <script src="~/inspinia-gh-pages/js/popper.min.js"></script>
+
     <!--/ start-smoth-scrolling -->
     <script src="~/CoreBlogTema/js/move-top.js"></script>
     <script src="~/CoreBlogTema/js/easing.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script>
         jQuery(document).ready(function ($) {
             $(".scroll").click(function (event) {
