--- a/Webproject/Views/Writer/EditProfile.cshtml
+++ b/Webproject/Views/Writer/EditProfile.cshtml
@@ -21,6 +21,10 @@
                     <input type="text" asp-for="@Model.username" class="form-control" />
                 </div>
                 <div class="form-group">
+                    <label for="WriterSurname">Kullanici Aciklamasi</label>
+                    <input type="text" asp-for="@Model.about" class="form-control" />
+                </div>
+                <div class="form-group">
                     <label for="WriterMail">Mail adresi</label>
                     <input type="text" asp-for="@Model.mail" class="form-control" />
                 </div>
