--- a/Webproject/Views/Homepage/Index.cshtml
+++ b/Webproject/Views/Homepage/Index.cshtml
@@ -29,28 +29,31 @@
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         @foreach (var item in Model)
         {
-            <div class="col" style="height:500px">
-                <a style="text-decoration:none" href="/Blog/BlogReadAll/@item.BlogID">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('@item.BlogImage');background-size: 100% 100%">
-                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">@item.BlogName</h3>
-                            <ul class="d-flex list-unstyled mt-auto bg-dark rounded-4 p-2">
-                                <li class="me-auto">
-                                    <img src="@item.Writer.ImageUrl" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white"><span class="ms-2">@item.Writer.UserName</span>
-                                </li>
-                                <li class="d-flex align-items-center me-2">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                    <small>@item.Category.CategoryName</small>
-                                </li>
-                                <li class="d-flex align-items-center me-2">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-                                    <small>@item.BlogCreateDate.ToShortDateString()</small>
-                                </li>
-                            </ul>
+            if (item.BlogStatus== true)
+            {
+                <div class="col" style="height:500px">
+                    <a style="text-decoration:none" href="/Blog/BlogReadAll/@item.BlogID">
+                        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('@item.BlogImage');background-size: 100% 100%">
+                            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">@item.BlogName</h3>
+                                <ul class="d-flex list-unstyled mt-auto bg-dark rounded-4 p-2">
+                                    <li class="me-auto">
+                                        <img src="@item.Writer.ImageUrl" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white"><span class="ms-2">@item.Writer.UserName</span>
+                                    </li>
+                                    <li class="d-flex align-items-center me-2">
+                                        <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
+                                        <small>@item.Category.CategoryName</small>
+                                    </li>
+                                    <li class="d-flex align-items-center me-2">
+                                        <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
+                                        <small>@item.BlogCreateDate.ToShortDateString()</small>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
+                    </a>
+                </div>
+            }
         }
     </div>
 
