--- a/Webproject/Areas/Admin/Views/Shared/Components/Statistic3/Default.cshtml
+++ b/Webproject/Areas/Admin/Views/Shared/Components/Statistic3/Default.cshtml
@@ -3,10 +3,15 @@
         <div class="widget style1 navy-bg">
             <div class="row vertical-align">
                 <div class="col-3">
-                    <i class="fa fa-user fa-3x"></i>
+                    <i class="fa fa-user fa-3x">
+                    </i>
+
+
                 </div>
-                <div class="col-9 text-right">
-                    <h2 class="font-bold">217</h2>
+                <div class="col-9 text-right m-auto">
+
+
+                    <h3 class="font-bold">Toplam uye: @ViewBag.TotalUser</h3>
                 </div>
             </div>
         </div>
