--- a/Webproject/Views/Admin/AdminNavbarPartial.cshtml
+++ b/Webproject/Views/Admin/AdminNavbarPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
-        <ul class="nav metismenu" id="side-menu">
+        <ul class="nav metismenu bg-dark" id="side-menu">
             <li class="nav-header">
                 <div class="dropdown profile-element">
                     <img alt="image" class="rounded-circle" src="~/inspinia-gh-pages/img/profile_small.jpg" />
@@ -21,99 +21,132 @@
                 </div>
             </li>
             <li>
-                <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard</span> <span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="index.html">Dashboard v.1</a></li>
-                    <li><a href="dashboard_2.html">Dashboard v.2</a></li>
-                    <li><a href="dashboard_3.html">Dashboard v.3</a></li>
-                    <li><a href="dashboard_4_1.html">Dashboard v.4</a></li>
-                    <li><a href="dashboard_5.html">Dashboard v.5 </a></li>
-                </ul>
-            </li>
-            
-            <li>
-                <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Grafikler</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="graph_flot.html">Flot Charts</a></li>
-                    <li><a href="graph_morris.html">Morris.js Charts</a></li>
-                    <li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
-                    <li><a href="graph_chartjs.html">Chart.js</a></li>
-                    <li><a href="graph_chartist.html">Chartist</a></li>
-                    <li><a href="c3.html">c3 charts</a></li>
-                    <li><a href="graph_peity.html">Peity Charts</a></li>
-                    <li><a href="graph_sparkline.html">Sparkline Charts</a></li>
-                </ul>
+                <a asp-controller="Widget" asp-action="index">
+                    <i class="fa fa-th-large"></i>
+                    <span class="nav-label">
+                        Dashboard
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Mesajlar </span><span class="label label-warning float-right">16/24</span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="mailbox.html">Inbox</a></li>
-                    <li><a href="mail_detail.html">Email view</a></li>
-                    <li><a href="mail_compose.html">Compose email</a></li>
-                    <li><a href="email_template.html">Email templates</a></li>
-                </ul>
+                <a asp-controller="Chart" asp-action="index">
+                    <i class="fa fa-line-chart"></i>
+                    <span class="nav-label">
+                        Grafikler
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-pie-chart"></i> <span class="nav-label">Metrikler</span>  </a>
+                <a asp-controller="AdminMessage" asp-action="InBox">
+                    <i class="fa fa fa-envelope"></i>
+                    <span class="nav-label">
+                        Mesajlar
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-group"></i> <span class="nav-label">Kategoriler</span>  </a>
+                <a asp-controller="Admin" asp-action="index">
+                    <i class="fa fa-th-large"></i>
+                    <span class="nav-label">
+                        Metrikler
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-list"></i> <span class="nav-label">Bloglar</span>  </a>
+                <a asp-controller="AdminCategory" asp-action="index">
+                    <i class="fa fa fa-pie-chart"></i>
+                    <span class="nav-label">
+                        Kategoriler
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-comment"></i> <span class="nav-label">Yorumlar</span>  </a>
+                <a asp-controller="AdminBlog" asp-action="index">
+                    <i class="fa fa-th-large"></i>
+                    <span class="nav-label">
+                        Bloglar
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-user"></i> <span class="nav-label">Yazarlar</span>  </a>
+                <a asp-controller="AdminComment" asp-action="index">
+                    <i class="fa fa-comments"></i>
+                    <span class="nav-label">
+                        Yorumlar
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-cogs"></i> <span class="nav-label">Ayarlar</span>  </a>
+                <a asp-controller="Writer" asp-action="index">
+                    <i class="fa fa-user"></i>
+                    <span class="nav-label">
+                        Yazarlar
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-bell"></i> <span class="nav-label">Bildirimler</span>  </a>
+                <a asp-controller="Admin" asp-action="index">
+                    <i class="fa fa-cog"></i>
+                    <span class="nav-label">
+                        Ayarlar
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-phone"></i> <span class="nav-label">Iletisim</span>  </a>
+                <a asp-controller="Admin" asp-action="index">
+                    <i class="fa fa-exclamation"></i>
+                    <span class="nav-label">
+                        Bildirimler
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="metrics.html"><i class="fa fa-address-book"></i> <span class="nav-label">Hakkimizda</span>  </a>
+                <a asp-controller="Admin" asp-action="index">
+                    <i class="fa fa-phone"></i>
+                    <span class="nav-label">
+                        Iletisim
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="widgets.html"><i class="fa fa-flask"></i> <span class="nav-label">Istatistikler</span></a>
+                <a asp-controller="Admin" asp-action="index">
+                    <i class="fa fa-id-card"></i>
+                    <span class="nav-label">
+                        Hakkimizda
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Formlar</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="form_basic.html">Basic form</a></li>
-                    <li><a href="form_advanced.html">Advanced Plugins</a></li>
-                    <li><a href="form_wizard.html">Wizard</a></li>
-                    <li><a href="form_file_upload.html">File Upload</a></li>
-                    <li><a href="form_editors.html">Text Editor</a></li>
-                    <li><a href="form_autocomplete.html">Autocomplete</a></li>
-                    <li><a href="form_markdown.html">Markdown</a></li>
-                </ul>
-            </li>
-            <li class="active">
-                <a href="#"><i class="fa fa-table"></i> <span class="nav-label">Tablolar</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li class="active"><a href="table_basic.html">Static Tables</a></li>
-                    <li><a href="table_data_tables.html">Data Tables</a></li>
-                    <li><a href="table_foo_table.html">Foo Tables</a></li>
-                    <li><a href="jq_grid.html">jqGrid</a></li>
-                </ul>
+                <a asp-controller="Admin" asp-action="index">
+                    <i class="fa fa-area-chart"></i>
+                    <span class="nav-label">
+                        Istatistikler
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-picture-o"></i> <span class="nav-label">Galeri</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="basic_gallery.html">Lightbox Gallery</a></li>
-                    <li><a href="slick_carousel.html">Slick Carousel</a></li>
-                    <li><a href="carousel.html">Bootstrap Carousel</a></li>
+                <a asp-controller="Blog" asp-action="ExportDynamicExcelBlogList">
+                    <i class="fa fa-file-excel-o"></i>
+                    <span class="nav-label">
+                        Excell Islemleri
+                    </span>
+                    <span class="fa arrow"></span>
+                </a>
+            </li>
 
-                </ul>
-            </li>
-            
         </ul>
 
     </div>
