--- a/Webproject/Views/Blog/Index.cshtml
+++ b/Webproject/Views/Blog/Index.cshtml
@@ -8,48 +8,51 @@
     <h2 class="pb-2 border-bottom">Bloglar</h2>
     @foreach (var item in Model)
     {
-        <div class="p-2 col-12 col-lg-3 col-md-4 col-sm-12 mt-2 rounded-2">
-            <div class="col-12 col-lg-11 col-md-11 col-sm-12 border border-1 rounded">
-                <img src="@item.BlogImage" style="height:200px" class="card-img-top rounded-2" alt="...">
-                <div class="card-body p-2" style="height:330px">
-                    <div style="height:50px">
-                        <a href="/Blog/BlogReadAll/@item.BlogID" class="nav-link">
-                            @if (item.BlogName.Length < 35)
-                            {
-                                <h5 class="card-title">
-                                    @item.BlogName
-                                </h5>
-                            }
-                            else
-                            {
-                                <h5 class="card-title">
-                                    @item.BlogName.Substring(0, item.BlogName.Substring(0, 35).LastIndexOf(" "))
+        if (item.BlogStatus == true)
+        {
+            <div class="p-2 col-12 col-lg-3 col-md-4 col-sm-12 mt-2 rounded-2">
+                <div class="col-12 col-lg-11 col-md-11 col-sm-12 border border-1 rounded">
+                    <img src="@item.BlogImage" style="height:200px" class="card-img-top rounded-2" alt="...">
+                    <div class="card-body p-2" style="height:330px">
+                        <div style="height:50px">
+                            <a href="/Blog/BlogReadAll/@item.BlogID" class="nav-link">
+                                @if (item.BlogName.Length < 35)
+                                {
+                                    <h5 class="card-title">
+                                        @item.BlogName
+                                    </h5>
+                                }
+                                else
+                                {
+                                    <h5 class="card-title">
+                                        @item.BlogName.Substring(0, item.BlogName.Substring(0, 35).LastIndexOf(" "))
+                                        ...
+                                    </h5>
+                                }
+                            </a>
+
+                        </div>
+                        <div style="height:200px">
+                            <p class="card-text">
+                                @if (item.BlogContent.Length < 200)
+                                {
+                                <p>@item.BlogContent</p>
+                                }
+                                else
+                                {
+                                <p>
+                                        @item.BlogContent.Substring(0, item.BlogContent.Substring(0, 200).LastIndexOf(" "))
                                     ...
-                                </h5>
-                            }
-                        </a>
+                                </p>
 
-                    </div>
-                    <div style="height:200px">
-                        <p class="card-text">
-                            @if (item.BlogContent.Length < 200)
-                            {
-                            <p>@item.BlogContent</p>
-                            }
-                            else
-                            {
-                            <p>
-                                    @item.BlogContent.Substring(0, item.BlogContent.Substring(0, 200).LastIndexOf(" "))
-                                ...
-                            </p>
-
-                            }
-                    </div>
-                    <div class="text-end me-1">
-                        <a class="btn btn-primary" href="/Blog/BlogReadAll/@item.BlogID" type="button">Devamini oku</a>
+                                }
+                        </div>
+                        <div class="text-end me-1">
+                            <a class="btn btn-primary" href="/Blog/BlogReadAll/@item.BlogID" type="button">Devamini oku</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        }
     }
 </div>
